# ReformatBackup

./: README.md
appbackup_manager/: __init__.py  pyproject.toml
appbackup_manager/src/: backup.py  main.py  restore.py  routes.py  scan.py  utils.py
appbackup_manager/static/js/: app.js  theme.js
appbackup_manager/templates/: base.html  index.html
docs/: codebase.md  coding-guidelines.md  project-description.md  project-layout.md  project-plan.md  project-prd.md  project-prompt.md
reformatbackup/: DEVELOPMENT.md  __init__.py  pyproject.toml  pytest.ini  requirements.txt  setup.cfg
reformatbackup/src/: __init__.py  backup.py  config.py  main.py  restore.py  routes.py  scan.py  utils.py
reformatbackup/static/css/: styles.css  themes.css
reformatbackup/static/js/: app.js  backup.js  restore.js  theme.js
reformatbackup/templates/: backup.html  base.html  index.html  restore.html  settings.html
reformatbackup/tests/: test_utils.py
