[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "reformatbackup"
version = "1.0.0"
description = "A utility for backing up and restoring application-specific user settings and data on Windows 11"
readme = "README.md"
authors = [
    {name = "ReformatBackup Team", email = "info@reformatbackup.example.com"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows :: Windows 11",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: System :: Archiving :: Backup",
    "Topic :: Utilities",
]
keywords = ["backup", "windows", "application", "settings", "restore"]
requires-python = ">=3.8"
dependencies = [
    "Flask>=2.0.0",
    "py7zr>=0.20.0",
    "psutil>=5.9.0",
    "winreg-python>=1.0.0",
    "requests>=2.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "flake8>=6.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "build>=0.10.0",
    "twine>=4.0.0",
]

[project.urls]
"Homepage" = "https://github.com/example/reformatbackup"
"Bug Tracker" = "https://github.com/example/reformatbackup/issues"
"Documentation" = "https://github.com/example/reformatbackup/wiki"

[project.scripts]
reformatbackup = "reformatbackup.src.main:main"

[tool.setuptools]
package-dir = {"" = "."}
packages = ["reformatbackup"]

[tool.setuptools.package-data]
reformatbackup = [
    "templates/*.html",
    "static/css/*.css",
    "static/js/*.js",
    "static/img/*.png",
]

[tool.black]
line-length = 79
target-version = ["py38"]

[tool.isort]
profile = "black"
line_length = 79

[tool.flake8]
max-line-length = 79
exclude = [".git", "__pycache__", "build", "dist"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
python_classes = "Test*"
addopts = "--cov=reformatbackup --cov-report=term-missing"